[package]
name = "pi_rust"
version = "0.0.9"
edition = "2021"
authors = ["Arpad Palinkas <arpad.palinkas@gmail.com>"]
description = "Pi Network SDK Rust implementation"
license = "PiOs"
homepage = "https://github.com/palinko91/pi-rust"
documentation = "https://github.com/palinko91/pi-rust"
repository = "https://github.com/palinko91/pi-rust"
readme = "README.md"
keywords = ["pi", "pinetwork", "backend", "crypto", "token"]
categories = ["sdk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["nacl"]
nacl=["dep:nacl"]

[dependencies]
stellar-base = "=0.5.0"
sodiumoxide = "=0.2.6"
serde = { version = "=1.0.183", features = ["derive"] }
serde_json = "=1.0.105"
reqwest = { version = "=0.11.18", features = ["json"] }
anyhow = "=1.0.75"

# stellar_sdk dependencies
ureq = "=2.4.0"
crc = "=3.0.0"
byteorder = "=1.4.3"
data-encoding = "=2.3.2"
nacl = {version = "=0.5.3", optional=true}
rand = "=0.8.4"
toml = "=0.5.9"
regex = "=1.5.6"
chrono = "=0.4.26"

[dev-dependencies]
dotenvy = "=0.15.7"
tokio  = { version = "=1.32.0", features = ["full"] }