[package]
name = "pi_rust"
version = "0.1.1"
edition = "2021"
authors = ["Arpad Palinkas <arpad.palinkas@gmail.com>"]
description = "Pi Network SDK Rust implementation"
license = "MIT"
homepage = "https://github.com/palinko91/pi-rust"
documentation = "https://docs.rs/pi_rust/0.0.9/pi_rust/"
repository = "https://github.com/palinko91/pi-rust"
readme = "README.md"
keywords = ["pi", "pinetwork", "backend", "crypto", "token"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellar-base = "0.6"
stellar_sdk = { git = "https://github.com/palinko91/stellar-sdk.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }